# mle-specialization-02

./: LICENSE  Makefile  README.md  pyproject.toml
data/processed/: base_model_labels.csv  model_01_labels.csv  model_02_labels.csv
docs/: GIT_STRATEGY.md
feast_service/fs_mle_02/feature_repo/: customer_marketing_campaign.py  feature_store.yaml
feast_service/fs_mle_02/feature_repo/data/: driver_stats.parquet  online_store.db  registry.db
mlruns/0/: meta.yaml
models/: Gaussian Mixture_model.joblib  K-Means_model.joblib  OPTICS+K-Means Ensemble_model.joblib
notebooks/: clustering_model.ipynb  constants.py  preprocessing.ipynb  utils.py
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/0/17c17f700c6246d2be383826a72d4b80/: meta.yaml
notebooks/mlruns/0/17c17f700c6246d2be383826a72d4b80/tags/: mlflow.runName  mlflow.source.name
package_mle_02/: __init__.py  config.py  dataset.py  features.py  plots.py
package_mle_02/modeling/: predict.py  train.py
package_mle_02/utils/: helpers.py
references/: instructions.txt
