[project]
name = "mle-specialization-02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cookiecutter-data-science>=2.3.0",
    "dagshub>=0.6.3",
    "feast>=0.52.0",
    "jupyterlab>=4.4.6",
    "loguru>=0.7.3",
    "matplotlib>=3.10.5",
    "mlflow<3.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "typer>=0.16.1",
]
